# voki

./: Cargo.toml  README.md  docker-compose.yml
base/: Cargo.toml
base/src/: abi.rs  api.rs  code.rs  lib.rs
dock/: .gitignore  Dockerfile
http/: Cargo.toml  Rocket.toml
http/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: args.rs  event.rs  lib.rs  listen.rs  main.rs  manage.rs
src/: info.rs  main.rs  tools.rs
src-tauri/: Cargo.toml  tauri.conf.json
web/: Cargo.toml  index.html  style.css
web/src/: lib.rs  post.rs  socket.rs  state.rs  view.rs
web/src/view/: app.rs  channels.rs  chat.rs  login.rs  raw.rs  svg.rs
web/static/: index.html  style.css
