[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
websocket = { package = "tokio-tungstenite", version = "0.17" }
futures = "0.3"
clap = { version = "3.1", features = ["derive"] }

[dependencies.tokio]
version = "1.18"
features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
]
