[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base" }
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
rand = "0.8"
websocket = { package = "tokio-tungstenite", version = "0.17" }

[dependencies.tokio]
version = "1.18"
features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
]

[profile.release]
strip = "debuginfo"
lto = true
