[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base" }
gloo = "0.7"
im = { package = "im-rc", version = "15.1.0" }
itertools = "0.10"
wasm-bindgen = "0.2"
wee_alloc = "0.4"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
    "Element",
    "HtmlCollection",
]

[profile.release]
strip = "debuginfo"
opt-level = "s"
lto = true
