[package]
name = "web"
version = "0.1.0"
edition = "2021"
description = "voki web client"

[lib]
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base" }
gloo = { version = "0.7", features = ["futures"] }
im = { package = "im-rc", version = "15.1" }
itertools = "0.10"
wasm-bindgen = "0.2"
wasm_futures = { package = "wasm-bindgen-futures", version = "0.4" }
wee_alloc = "0.4"
yew = "0.19"
futures = "0.3.21"

[dependencies.web-sys]
version = "0.3"
features = [
    "Element",
    "HtmlCollection",
]

[profile.release]
strip = "debuginfo"
opt-level = "s"
lto = true
